--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "staff_tracker",
+  "name": "staff-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "tracker.js",
+  "main": "server.js",
   "dependencies": {
-    "console.table": "^0.10.0",
-    "inquirer": "^7.0.4",
-    "mysql": "^2.18.1"
-  },
-  "devDependencies": {
-    "jest": "^24.9.0"
+    "mysql": "^2.16.0"
   },
   "scripts": {
-    "test": "jest --verbose test/*"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
